<resources>
    <string name="app_name">LotusAddictionApp</string>
    <string name="editTextPassword">********</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="email_address_hint">email@address.com</string>
    <string name="login">Login</string>
    <string name="payment_details">Payment Details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="card_hint">4******</string>
    <string name="card_number">CARD NUMBER:</string>
    <string name="expiry">Expiry:</string>
    <string name="cvv">CVV:</string>
    <string name="continue_button">Continue</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="live_group_video_session_bi_weekly_all_clients_are_encouraged_to_attend">Live Group Video Session – Bi-Weekly (All clients are encouraged to attend).</string>
    <string name="comment1"> ^^ there was no way I wasnt going to make that the name when it prompted that</string>
    <string name="plus_plan">PLUS PLAN</string>
    <string name="_60_day_program">60-Day Program.</string>
    <string name="_6_month_aftercare_program_bi_weekly_session">6-Month Aftercare Program - Bi-Weekly Session.</string>
    <string name="basic_plan_plus">BASIC PLAN+</string>
    <string name="live_group_video_session_weekly_all_clients_are_encouraged_to_attend">Live Group Video Session – Weekly (All clients are encouraged to attend).</string>
    <string name="premium">PREMIUM</string>
    <string name="year_aftercare">1-Year Aftercare Program - Weekly session.</string>
    <string name="two_on_one">Two One-on-One \'s with counsellor - weekly.</string>
    <string name="two_therapeutic_materials_per_day">Two Therapeutic Materials Per Day.</string>
    <string name="therapeutic_assignments_1_2_hours_weekly">Therapeutic Assignments – 1-2 hours weekly.</string>
    <string name="complete">Complete</string>
    <string name="basic_plan">BASIC PLAN</string>
    <string name="get_started">Let\'s get you started</string>
    <string name="firstname">FirstName</string>
    <string name="middlename">MiddleName</string>
    <string name="lastname">LastName</string>
    <string name="password">Password</string>
    <string name="mr">Mr.</string>
    <string name="mrs_ms">Mrs./Ms.</string>
    <string name="other">Other</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="payment">Payment</string>
    <string name="welcome_to_lotus">Welcome to Lotus</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="get_started_welcome">Get Started</string>
    <string name="video_1">VIDEO 1</string>
    <string name="video_2">VIDEO 2</string>
    <string name="videos">Videos</string>
    <string name="plans">Plans</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="highlights_of_the_day">Highlights of the Day:</string>
    <string name="want_to_change_your_plan">Want to Change Your Plan?</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="agenda">AGENDA:</string>
    <string name="watch_video_1">Watch Video #1</string>
    <string name="watch_video_2">Watch Video #2</string>
    <string name="watch">Watch</string>
</resources>